fixed collapsing navbar

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -66,9 +66,6 @@ body {
     color:white 
 }
 
-.navbar{
-    height: 75px;
-}
 
 .navbar-nav a{
    
